# sqlite-vectordb

./: CMakeLists.txt  GTestCMakeLists.txt.in  README.md  test_extension.cpp  test_vec.cpp  vector_extension.cpp
include/: pointcloud.hpp  vec.hpp
